# MuImag

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  Cosmic_Muon.mac  MuImag.cc  Muon_Setup.root  PrimaryHitsDict_rdict.pcm  README.md
GDML/Letter/: Muon_Geometry.gdml  Muon_Setup.gdml  materials.xml
GDML/Loop/: G4Geom.gdml  Muon_Geometry.gdml  Muon_Setup.gdml
GDML/Overlap/: Muon_Geometry.gdml  Muon_Setup.gdml
Response/: dcs.txt  full_tpc_sim  full_tpc_sim.C  ion_signal  ion_signal.C  makefile
Response/GasFile/: Ar_70_CO2_30_p7600_t296_f50_1e6.gas  Ar_70_CO2_30_p760_t296_f50_1e6.gas  Ar_90_CO2_10_p760_t296_f50_1e6.gas
Response/Gmsh/: .mm_cell.sif.swp  mm_cell.geo  mm_cell.sif  netgen.prof
Response/Gmsh/mm_cell/: mesh.boundary  mesh.header
analysis/: MLEM_cc.d  MLEM_cc_ACLiC_dict_rdict.pcm  OLS_FCN.hh  PoCA.cc  PoCA_cc.d  PoCA_cc_ACLiC_dict_rdict.pcm  Scatter_Pt.h
analysis/Shape/: Sphere.hh
analysis/Test/: testDerivative.cc  testGenerator.C
include/: .Cluster.hh.swp  .MuEventAction.hh.swp  Cluster.hh  GarfieldG4FastSimulationModel.hh  GarfieldPhysics.hh  LinkDef.hh  MuActionInitialization.hh  MuAnalysis.hh  MuDetectorConstruction.hh  MuEventAction.hh  MuPhysicsList.hh  MuPrimaryGeneratorAction.hh  MuRunAction.hh  MuSteppingAction.hh  MuonEvent.hh  PrimaryHits.hh  PrimaryHitsDict.cc  PrimaryHitsDict_rdict.pcm  PrimaryHits_cc.d
lib/: MuonEvent_dict_rdict.pcm  PrimaryHitsDict_rdict.pcm  libMuonEvent.rootmap  libPrimaryHits.rootmap
src/: .MuEventAction.cc.swp  .MuPrimaryGeneratorAction.cc.swp  .MuSteppingAction.cc.swp  .PrimaryHits.cc.swp  Cluster.cc  GarfieldG4FastSimulationModel.cc  MuActionInitialization.cc  MuDetectorConstruction.cc  MuEventAction.cc  MuPhysicsList.cc  MuPhysicsList_1.cc  MuPrimaryGeneratorAction.cc  MuRunAction.cc  MuSteppingAction.cc  MuonEvent.cc  Muon_Geometry.gdml  Muon_Setup.gdml  PrimaryHits.cc  PrimaryHitsDict.cc  PrimaryHitsDict_rdict.pcm  PrimaryHits_cc.d  PrimaryHits_cc_ACLiC_dict_rdict.pcm
